--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
 }
 
 body {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+
   background-color: #009cde;
   height: 100vh;
   transition: 0.5s;
@@ -16,24 +20,37 @@ h1, h2 {
 #app {
   display: flex;
   flex-flow: row wrap;
-  margin-top: 20px;
-
+  margin-top: 3%;
+  width: 80vw;
   justify-content: center;
   align-items: center;
 }
 
 #app > div {
-  background-color: #fff;
   border: 1px solid #000;
-  width: 80px;
+  width: 130px;
   margin: 5px;
   text-align: center;
   line-height: 25px;
   font-size: 18px;
+  border-radius: 5px;
 
   transition: 0.2s;
+  user-select: none;
 }
-#app > div:hover {
-  background-color: #97d700;
+
+.fizz {
+  background-color:#97d700;
 }
+
+.buzz {
+  background-color:#e73c7e;
+}
+.fizz-buzz {
+  background-color: #696969;
+}
+.bg-white {
+  background-color: #fff;
+}
+
 
